--- a/react_frontend/public/index.html
+++ b/react_frontend/public/index.html
@@ -10,6 +10,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
