--- a/react_frontend/public/index.html
+++ b/react_frontend/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    <title>ScrapedIn</title>
+    <meta name="description" content="Dev job picker ;)"/>
+    <title>DevJobPicker</title>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
